# etl

./: .env  main.py  pyproject.toml  script.sql  skeleton.sql
scripts/: ACTB_DAILY_LOG.sql  ACTB_HISTORY.sql  BCTB_CONTRACT_MASTER.sql  CATM_AMOUNT_BLOCKS.sql  CATM_CHECK_BOOK.sql  CATM_CHECK_DETAILS.sql  CSTB_ADDL_TEXT.sql  CSTB_AMOUNT_TAG.sql  CSTB_CONTRACT.sql  CSTB_CONTRACT_EVENT_LOG.sql  CSTB_EVENT.sql  CSTM_CONTRACT_USERDEF_FIELDS.sql  CSTM_FUNCTION_USERDEF_FIELDS.sql  CSTM_PRODUCT.sql  CSTM_PRODUCT_GROUP.sql  CSTM_PRODUCT_UDF_FIELDS_MAP.sql  CYTB_RATES_HISTORY.sql  CYTM_CCY_DEFN.sql  CYTM_RATES.sql  CYTM_RATE_TYPE.sql  DETB_RTL_TELLER.sql  GETM_FACILITY.sql  GETM_LIAB.sql  GETM_LINECODE_CUST.sql  GLTM_MIS_CODE.sql  ICTB_ENTRIES.sql  ICTB_ENTRIES_HISTORY.sql  ICTB_UDEVALS.sql  ICTM_ACC.sql  ICTM_ACC_UDEVALS.sql  ICTM_PR_INT_EFFDT.sql  ICTM_PR_INT_UDEVALS.sql  ICTM_RATES.sql  ICTM_TD_DETAILS.sql  LCTB_AVAILMENTS.sql  LCTB_CONTRACT_LIMITS.sql  LCTB_CONTRACT_MASTER.sql  LDTM_CLUSTER_MASTER.sql  MITM_CUSTOMER_DEFAULT.sql  SMTB_LANGUAGE.sql  (+27 more)
